--- a/.gitignore
+++ b/.gitignore
@@ -176,6 +176,12 @@ week_1/data/processed/*
 case/data/raw/*
 case/data/processed/*
 
+week_2/notebooks/catboost_info
+
+# Ignore MLflow content
+mlruns/
+catboost_info/
+
 # Keep the folders
 !week_1/data/raw/
 !week_1/data/processed/
