--- a/requirements.lock.txt
+++ b/requirements.lock.txt
@@ -121,6 +121,7 @@ pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-json-logger==3.2.1
 python-slugify==8.0.4
+python-bcb==0.3.0
 pytz==2024.2
 pyyaml==6.0.2
 pyzmq==26.2.0
