--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 alembic==1.14.0
 annotated-types==0.7.0
-anyio==4.7.0
-appnope==0.1.4
+anyio==4.8.0
 arfs==2.3.2
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -15,11 +14,12 @@ bleach==6.2.0
 blinker==1.9.0
 cachetools==5.5.0
 catboost==1.2.7
-certifi==2024.12.14
+certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 cloudpickle==3.1.0
+colorama==0.4.6
 colorlog==6.9.0
 comm==0.2.2
 contourpy==1.3.1
@@ -43,7 +43,7 @@ graphene==3.4.3
 graphql-core==3.2.5
 graphql-relay==3.2.0
 graphviz==0.20.3
-gunicorn==23.0.0
+greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -73,6 +73,7 @@ kaggle==1.6.17
 kiwisolver==1.4.8
 lightgbm==4.5.0
 llvmlite==0.43.0
+lxml==5.3.1
 mako==1.3.8
 mapie==0.9.1
 markdown==3.7
@@ -102,15 +103,14 @@ pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 patsy==1.0.1
-pexpect==4.9.0
 pillow==11.0.0
+pip==25.0.1
 platformdirs==4.3.6
 plotly==5.24.1
 prometheus-client==0.21.1
 prompt-toolkit==3.0.48
 protobuf==5.29.2
 psutil==6.1.1
-ptyprocess==0.7.0
 pure-eval==0.2.3
 pyarrow==18.1.0
 pyasn1==0.6.1
@@ -118,10 +118,13 @@ pyasn1-modules==0.4.1
 pycparser==2.22
 pygments==2.18.0
 pyparsing==3.2.0
+python-bcb==0.3.0
 python-dateutil==2.9.0.post0
 python-json-logger==3.2.1
 python-slugify==8.0.4
-pytz==2024.2
+pytz==2025.1
+pywin32==308
+pywinpty==2.0.14
 pyyaml==6.0.2
 pyzmq==26.2.0
 referencing==0.35.1
@@ -155,11 +158,12 @@ tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
 typing-extensions==4.12.2
-tzdata==2024.2
+tzdata==2025.1
 uri-template==1.3.0
 urllib3==2.3.0
 utilsforecast==0.2.10
 venn-abers==1.4.6
+waitress==3.0.2
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
